<resources>
    <string name="app_name">My Application</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="segitiga">Segitiga</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="kalkulator_nilai">Kalkulator Nilai</string>
    <string name="panjang">Panjang</string>
    <string name="hitung">Hitung</string>
    <string name="share">Share</string>
    <string name="lebar">Lebar</string>
    <string name="hasil_luas">Hasil Luas</string>
    <string name="hasil_keliling">Hasil Keliling</string>
    <string name="absensi_75"><![CDATA[Absensi <= 75%]]></string>
    <string name="nilai_akhir">Nilai Akhir</string>
    <string name="a">A</string>
    <string name="nilai_praktikum">Nilai Praktikum</string>
    <string name="nilai_assessment_1">Nilai Assessment 1</string>
    <string name="nilai_assessment_2">Nilai Assessment 2</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="reset">Reset</string>
    <string name="gambar_indekx">Gambar Indekx</string>
</resources>
